<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ParkGidi</string>

    <string name="action_parking">Parking</string>
    <string name="action_account">Account</string>
    <string name="action_history">History</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>

    <string name="action_drawe_open">Drawer Open</string>
    <string name="action_drawe_close">Drawer Close</string>


    <!--//Res For Facebook-->
    <string name="facebook_application_id" translatable="false">1031017683679240</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID1031017683679240</string>
    <string name="sign_in_cancelled">Sign in cancelled by user!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="logout">Logout</string>
    <string name="content_parking_request">Do you want to request for this parking space?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_parking_request">Confirm request</string>
    <string name="view_details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_test_avatar"><![CDATA[https://firebasestorage.googleapis.com/v0/b/parkgidi–f7b9f.appspot.com/o/avatar%2Fphoto.jpg?alt=media&token=36bcfcc9–27b5-4188-9e09-069792fcf35>]]></string>
    <string name="default_testing_name">Okafor Jerry Hanks</string>
    <string name="top_up">Top Up</string>
    <string name="format_credit">Credit: $20</string>
    <string name="agree_to_terms_of_service">I agree to terms of service</string>
    <string name="add_car_title">Add a Car</string>
    <string name="ok">Ok</string>
    <string name="model">Model</string>
    <string name="number_plate">Number plate</string>
    <string name="i_agree_to_terms_of_service">I agree to terms and condition of service</string>
    <string name="add_space_title">Add Space</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="sqn_number">SQN Number</string>
    <string name="select_the_coordinate_of_the_space">Select the Coordinate of the Space</string>
    <string name="adding_space_note">Note: You must be standing at the exact spot for your the space tou want ot add.</string>
    <string name="format_visible_place">
        Place Id: <xliff:g id="place_id">%s</xliff:g>\n
        Address: <xliff:g id="place_address">%s</xliff:g>\n
        Phone: <xliff:g id="place_phone">%s</xliff:g></string>

</resources>
