<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.MainActivity">
    <group android:id="@+id/m1">
        <item
            android:id="@+id/action_parking"
            android:icon="@drawable/ic_forum"
            android:title="@string/action_parking" />
        <item
            android:id="@+id/action_history"
            android:icon="@drawable/ic_forum"
            android:title="@string/action_history" />
    </group>
    <group android:id="@+id/m2">
        <item
            android:id="@+id/action_pages"
            android:icon="@drawable/ic_pages"
            android:title="@string/action_account" />
        <item
            android:id="@+id/action_users"
            android:icon="@drawable/ic_person_pin"
            android:title="@string/action_help" />

    </group>
    <group android:id="@+id/m3">
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_check_white_48dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/logout" />
    </group>
</menu>
