<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/apartment_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apartment_name"
        app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
        app:hintTextAppearance="@style/AppTheme.Text.HintText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/apartment_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sqn_number_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
        app:hintTextAppearance="@style/AppTheme.Text.HintText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sqn_number_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:lines="1" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_8"
        android:paddingTop="@dimen/dp_8">

        <ImageButton
            android:id="@+id/loc_choice_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_gps_fixed" />

        <TextView
            android:id="@+id/sel_place_inst_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:padding="5dp"
            android:text="@string/select_the_coordinate_of_the_space"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/adding_space_note" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:id="@+id/selected_space_card"
        app:cardElevation="@dimen/dp_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <TextView
                android:id="@+id/place_coord_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:text="Coordinate" />

            <TextView

                android:id="@+id/place_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Place Id:"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <CheckBox
        android:id="@+id/new_space_tofs_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/i_agree_to_terms_of_service"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

</LinearLayout>